--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
   <!-- Navigation Bar -->
   <nav>
     <ul>
-      <li><a href="#home" class="nav-link" hx-get="myapp/ddd_home.html" hx-target="#content"
+      <li><a href="#home" class="nav-link" hx-get="myapp/pages/page_home.html" hx-target="#content"
           hx-push-url="#home">Home</a></li>
-      <li><a href="#myprofile" class="nav-link" hx-get="myapp/ddd_myprofile.html" hx-target="#content"
+      <li><a href="#myprofile" class="nav-link" hx-get="myapp/pages/page_myprofile.html" hx-target="#content"
           hx-push-url="#myprofile">myprofile</a></li>
-      <li><a href="#contact" class="nav-link" hx-get="myapp/ddd_contact.html" hx-target="#content"
+      <li><a href="#contact" class="nav-link" hx-get="myapp/pages/page_contact.html" hx-target="#content"
           hx-push-url="#contact">Contact</a></li>
     </ul>
   </nav>
@@ -100,11 +100,11 @@
       function loadInitialContent() {
         const hash = window.location.hash || '#home';
         const pageMap = {
-          '#home': 'myapp/ddd_home.html',
-          '#myprofile': 'myapp/ddd_myprofile.html',
-          '#contact': 'myapp/ddd_contact.html'
+          '#home': 'myapp/pages/page_home.html',
+          '#myprofile': 'myapp/pages/page_myprofile.html',
+          '#contact': 'myapp/pages/page_contact.html'
         };
-        const url = pageMap[hash] || 'myapp/ddd_home.html';
+        const url = pageMap[hash] || 'myapp/pages/page_home.html';
         $('.nav-link[href="' + hash + '"]').addClass('active');
         htmx.ajax('GET', url, { target: '#content', pushUrl: hash });
       }
