--- a/pages/page_home.html
+++ b/pages/page_home.html
@@ -3,6 +3,21 @@
   <h3>Home</h3>
 
 
+<div>
+
+<div
+  hx-get="myapp/tracking/view_tracking_wins.html"
+  hx-trigger="load"
+  hx-target="#tracking-wins-container"
+  hx-swap="innerHTML">
+</div>
+<div id="tracking-wins-container"></div>
+
+
+</div>
+
+
+
   <div>
     <div class="d-flex justify-content-center align-items-center" style="min-height: 320px;">
       <div class="card shadow-lg p-4"
